--- a/MVCTravelBookingISE/Views/Home/Index.cshtml
+++ b/MVCTravelBookingISE/Views/Home/Index.cshtml
@@ -15,12 +15,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/main.css" />
+    <link rel="stylesheet" href="~/css/Design.css" />
+
     
 </head>
 <body>
-
+    
+   
+@*
     <header class="">
 
         <div class="miri-ui-kit-header-content text-center text-dark d-flex flex-column justify-content-center align-items-center ml-auto">
@@ -789,8 +791,8 @@
     </section>
 
 
-
+*@
 
 
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
