--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,62 +9,79 @@
  <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/css/login.css" /> 
-    <title>Link CSS to HTML</title>
+    
 
-
-<div class="container vh-100 d-flex align-items-center">
-    <div id="innerPage">
-        <div class="row align-items-center justify-content-center">
+<body class="bg-white">
+<section class="vh-100 ">
+    <div class="container py-5 h-100">
+        <div class="row d-flex align-items-center justify-content-center h-100">
            
-           <form id="account" method="post">
+         
                 
-            <div class="col-sm-6 col-xs-12 text-white p-5">
-                <div class="lead">
-                    <h1 class="text-white">Welcome Back</h1>
-                    <p class="fs-6 mb-4">
-                        <small>Login to continue. </small>
-                    </p>
-                </div>
-                <button type="button" class="btn btn-primary w-100 text-white"><i class="fab fa-google me-2"></i> Sign in with Google</button>
-              
-                <input asp-for="Input.Email" type="Email" class="form-control rounded-0 mb-3" autocomplete="username" aria-required="true placeholder="Enter Email" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5 ">
+                <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                    <div class="card-body p-5 text-center">
+                           
+                        <div class="mb-md-5 mt-md-4 pb-5">
+                       
+                            <h2 class="fw-bold mb-2 text-uppercase text-white">Login</h2>
+                          
+           
+             
+                   <form id="account" method="post">
+                                <div class="form-outline form-white mb-4">
+                        <input asp-for="Input.Email" type="Email" class="form-control rounded-0 mb-3" autocomplete="username" aria-required="true placeholder="Enter Email" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                       </div>
+                                <div class="form-outline form-white mb-4">
+                        <input asp-for="Input.Password" class="form-control rounded-0 mb-3" autocomplete="current-password" aria-required="true" type="password" placeholder="Enter Password" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
 
-                <input asp-for="Input.Password" class="form-control rounded-0 mb-3" autocomplete="current-password" aria-required="true" type="password" placeholder="Enter Password" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                       </div>
+                       @*<p class="small mb-5 pb-lg-2">
+                          <a class="text-white-50" id="forgot-password" style="text-decoration:none" asp-page="./ForgotPassword">Forgot your password?</a>
+                       </p> *@
+                                <!-- Checkbox -->
 
-                
-                
-                <div>
-                    
-                    <label asp-for="Input.RememberMe" class="form-label">
-                        <input class="form-check-input" asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
-                    </label>
-
+                                <div class="form-check">
+                                    <label asp-for="Input.RememberMe" class="form-label">
+                                        <input class="form-check-input" asp-for="Input.RememberMe" />
+                                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                                    </label>
+                                </div>
+                         <!----Submit button----->
+                           <button id="login-submit" type="submit" class="btn btn-outline-light btn-lg px-5 mt-4 w-100">Log in</button>
+                            </form>
                     </div>
-                <div>
-                    <button id="login-submit" type="submit" class="btn btn-info mt-4 w-100">Log in</button>
-                </div>
-                 <div>
-                    <p>
-                        <a id="forgot-password" style="text-decoration:none" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register"   style="text-decoration:none" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation"  style="text-decoration:none" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>
+                      <p class="mb-0">
+
+                        <a class="text-white-50 fw-bold" asp-page="./Register" style="text-decoration:none" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                      </p>
+                    <p class="mb-0">
+                        <a id="resend-confirmation" style="text-decoration:none" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                   </p>
+                   
+               
+                    
+              </div>
+            
+             </div>
+
+           </div>
+
+               
+
+                
+                
+                
+              
            
         </div>
-        </form>
-    </div>
-</div>
-</div>
 
+    </div>
+
+</section>
+</body>
 
 
 
@@ -102,6 +119,4 @@
     </div>
 </div>
 *@
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+
