--- a/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
@@ -4,21 +4,30 @@
     ViewData["Title"] = "Create";
 }
 
-<
+<head>
 
- <h1>List your property Below</h1>
-    
 
+
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/main.css" />
+</head>
+
+<body>
+<img src="~/img/multimedia-icon-home.png" style="height:300px; width:300px;" />
+<strong><h1 class="" style="margin-top:50px;">List your property Below</h1></strong>
+ 
 
 <div class="row">
-    <div class="col-md-8 off-set-2">
-       
+    <div class="col-12 off-set-2">
+            <div class="alert alert-warning" role="alert">
+                <strong>This function is available for Admin Users Only</strong>
+            </div>
         <div class="row">
-            <div class="col-md-8 offset-2">
+            <div class="col-10 offset-2">
                 <form asp-action="Create">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                    <div class=" mb-3 row">
-                       <div class="col-md-6">
+                       <div class="col-8">
 
                             <div class="form-group">
                                 <label asp-for="Acco_Name" class="control-label"></label>
@@ -42,7 +51,7 @@
                                 <span asp-validation-for="Acco_Type" class="text-danger"></span>
                             </div>
                        </div>
-                        <div class="col-md-6">
+                        <div class="col-10">
 
                             <div class="form-group">
                                 <label asp-for="Acco_Rooms" class="control-label"></label>
@@ -66,7 +75,7 @@
                               </div>
                            
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-10">
                             <div class="form-group">
                                 <label asp-for="Acco_Price" class="control-label"></label>
                                 <div class="input-group mb-3">
@@ -82,7 +91,7 @@
                                 <span asp-validation-for="Acco_Price" class="text-danger"></span>
                             </div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-10">
                             <div class="form-group">
                                 <label asp-for="Acco_Rules" class="control-label"></label>
                                 <textarea asp-for="Acco_Rules" class="form-control" ></textarea>
@@ -103,7 +112,12 @@
                    
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-success" />
+                            <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
+
+                        <div>
+                            <a class="btn btn-outline-info" asp-action="Index">Back to List</a>
+                        </div>
                 </form>
             </div>
         </div>
@@ -111,9 +125,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
@@ -124,3 +135,4 @@
         }
     </script>*@
 
+</body>
