--- a/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
     <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="~/css/site.css"/>
+    <link rel="stylesheet" href="~/css/main.css" />
 
 
 
@@ -21,6 +22,23 @@
 </head>
 
 <body style="margin:0;">
+
+
+
+        <!-- Section: Block Content -->
+        <section class="dark-grey-text text-center">
+            
+            <strong><h1 class="text-center font-weight-bold mb-4 pb-2 h1">Find your stay!</h1></strong>
+            <p class="text-center text-muted w-responsive mx-auto mb-5">
+
+               
+                        Offering the best booking link for the guests and additional benefits for work travellers
+            </p>
+        <img src="~/img/suburbs.png" style="width:400px; height:300px;" />
+            <!-- Grid row -->
+          
+         </section>  
+      
 
     <header class="py-5 ">
     <div class="card border-2 ">
@@ -48,41 +66,11 @@
                 </div>
 
 
+           
+
                 <div class="col">
                     <div class="mb-2">
-
-                        <select class="form-select"
-                                id="travel-class-select"
-                                aria-describedby="travel-class-label">
-                            <option value="ECONOMY">Hotel</option>
-                            <option value="PREMIUM_ECONOMY">Villa</option>
-                            <option value="BUSINESS">Apartment</option>
-                            <option value="FIRST">Flats</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="col-sm">
-
-
-
-                    <div class="mb-2">
-                        <div class="input-group">
-                            <label for="adults-input" class="input-group-text">Check in</label>
-                            <input type="date"
-                                   min="0"
-                                   class="form-control"
-                                   id="adult-input"
-                                   aria-describedby="adults-label" />
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="mb-3">
                         <a class="btn btn-dark text-white" asp-controller="AccomodationModels" asp-action="Filter" asp-action="Create">Search Accommodation!</a>
-
-
 
 
                     </div>
@@ -150,88 +138,14 @@
 
 
     
- <div class="container my-5">
-
-
-        <!-- Section: Block Content -->
-        <section class="dark-grey-text text-center">
-
-            <strong><h1 class="text-center font-weight-bold mb-4 pb-2 h1">Find your stay!</h1></strong>
-            <p class="text-center text-muted w-responsive mx-auto mb-5">
-
-               
-                        Offering the best booking link for the guests and additional benefits for work travellers
-            </p>
-
-            <!-- Grid row -->
-            <div class="row">
-
-                <!-- Grid column -->
-                <div class="col-md-6 mb-4">
-
-                    <!-- Card -->
-                    <div class="card card-image" style="background-image: url(https://images.pexels.com/photos/221284/pexels-photo-221284.jpeg?cs=srgb&dl=pexels-pixabay-221284.jpg&fm=jpg&_gl=1*1dqmyv5*_ga*MjEzMjg1NDM3LjE2Njc5OTk5OTY.*_ga_8JE65Q40S6*MTY2ODA4MjIwNS4zLjEuMTY2ODA4MjIzNi4wLjAuMA..);">
-                        <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4 px-md-5 rounded">
-                            <div>
-                                <h6 class="text-white">
-                                    <i class="fas fa-chart-pie"></i>
-                                    <strong> Explore Transport</strong>
-                                </h6>
-                                <h3 class="py-3 font-weight-bold text-white">
-                                    <strong>Travel conviniently with Unlimited Travels</strong>
-                                </h3>
-                                <p class="pb-3">
-                                    Explore the best reliable and less costly transportation we have to offer.
-                                </p>
-                                <a asp-controller="TransportModels" asp-action="Index" class="btn btn-warning btn-rounded btn-md">
-                                    Explore
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
-</svg></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Card -->
-
-                </div>
-                <!-- Grid column -->
-                <!-- Grid column -->
-                <div class="col-md-6 mb-4">
-
-                    <!-- Card -->
-                    <div class="card card-image" style="background-image: url(https://images.pexels.com/photos/104826/aircraft-holiday-sun-tourism-104826.jpeg?cs=srgb&dl=pexels-pixabay-104826.jpg&fm=jpg&_gl=1*1a2wgp9*_ga*MjEzMjg1NDM3LjE2Njc5OTk5OTY.*_ga_8JE65Q40S6*MTY2ODA4MjIwNS4zLjEuMTY2ODA4MjQ1OS4wLjAuMA..);">
-                        <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4 px-md-5 rounded">
-                            <div>
-                                <h6 class="green-tex text-white">
-                                    <i class=""></i>
-                                    <strong> Explore Flights</strong>
-                                </h6>
-                                <h3 class="py-3 font-weight-bold text-white">
-                                    <strong>Dont worry about whats in the bottom</strong>
-                                </h3>
-                                <p class="pb-3">
-                                    Explore the most avodable flights from wide range of reliable service providers
-                                </p>
-                                <a asp-controller="FlightModel" asp-action="Index" class="btn btn-warning btn-rounded btn-md"> Explore <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
-</svg></a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Card -->
-
-                </div>
-                <!-- Grid column -->
-                
-
-            </div>
+ 
             <!-- Grid row -->
 
-        </section>
+     
         <!-- Section: Block Content -->
 
 
-    </div>
+    
 
    
     
@@ -246,94 +160,11 @@
       <div class="grid-body">
         <div class="row">
           <!-- BEGIN FILTERS -->
-          <div class="col-md-3">
-            <h3 class="grid-title"><i class="fa fa-filter"></i> Filters</h3>
-            <hr>
-            
-            <!-- BEGIN FILTER BY CATEGORY -->
-            <h6>By category:</h6>
-            <div class="form-check">
-            <div class="checkbox">
-                    <input type="checkbox" class="form-check-input" />
-                   <label class="form-check-label" for="flexCheckDefault" > Villa </label>
-              </div>
-             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> Resorts</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> Apartments</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> Hotels</label>
-            </div>
-            <hr />
-
-             <h6>By Star Rating:</h6>
-            <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> 1 star</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> 2 stars </label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> 3 stars</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> 4 stars</label>
-            </div>
-             <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> 5 stars</label>
-            </div>
-             <div class="checkbox">
-              <label><input type="checkbox" class="icheck">Unrated</label>
-            </div>
-            <hr />
-            <!-- END FILTER BY CATEGORY -->
-            
-            <div class="padding"></div>
-             <strong><label class="form-label" for="customRange2">Search price Range</label></strong>
-
-    <form>
-        <strong><span>0</span></strong> <input type="range" class="form-range w-75" min="0" max="100" id="customRange2" />   <strong><span>100</span></strong>
-
-    </form>
-                                <div class="padding"></div>
-                                <hr />
-            <!-- BEGIN FILTER BY DATE -->
-            <h6>By date:</h6>
-            From
-            <div class="input-group date form_date" data-date="2014-06-14T05:25:07Z" data-date-format="dd-mm-yyyy" data-link-field="dtp_input1">
-              <input type="date" class="form-control">
-            
-            </div>
-            <input type="hidden" id="dtp_input1" value="">
-            
-            To
-            <div class="input-group date form_date" data-date="2014-06-14T05:25:07Z" data-date-format="dd-mm-yyyy" data-link-field="dtp_input2">
-              <input type="date" class="form-control">
-              
-            </div>
-            <input type="hidden" id="dtp_input2" value="">
-            <!-- END FILTER BY DATE -->
-            
-            <div class="padding"></div>
-            <hr />
-            <!-- BEGIN FILTER BY PRICE -->
-            <h6>By price:</h6>
-            Between <div id="price1">$300</div> to <div id="price2">$800</div>
-            <div class="slider-primary">
-              <div class="slider slider-horizontal" style="width: 152px;"><div class="slider-track"><div class="slider-selection" style="left: 30%; width: 50%;"></div><div class="slider-handle round" style="left: 30%;"></div><div class="slider-handle round" style="left: 80%;"></div></div><div class="tooltip top hide" style="top: -30px; left: 50.1px;"><div class="tooltip-arrow"></div><div class="tooltip-inner">300 : 800</div></div><input type="text" class="slider" value="" data-slider-min="0" data-slider-max="1000" data-slider-step="1" data-slider-value="[300,800]" data-slider-tooltip="hide"></div>
-            </div>
-            <div style="margin-top:50px;">
-                <a class="btn btn-primary">Submit</a>
-           </div>
-            <!-- END FILTER BY PRICE -->
-          </div>
+          
           <!-- END FILTERS -->
           <!-- BEGIN RESULT -->
-          <div class="col-md-9">
-            <h2><i class="fa fa-file-o"></i>List of Accomodations</h2>
+          <div class="col-md-12">
+            <h2>List of Accomodations</h2>
             <hr>
             <!-- BEGIN SEARCH INPUT -->
           
@@ -342,30 +173,7 @@
             
             <div class="padding"></div>
             
-            <div class="row">
-              <!-- BEGIN ORDER RESULT -->
-              <div class="col-sm-6">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                    Order by <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Villa</a></li>
-                    <li><a href="#">Resorts</a></li>
-                    <li><a href="#">Hotels</a></li>
-                    <li><a href="#">Apartments</a></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- END ORDER RESULT -->
-              
-              <div class="col-md-6 text-right">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default active"><i class="fa fa-list"></i></button>
-                  <button type="button" class="btn btn-default"><i class="fa fa-th"></i></button>
-                </div>
-              </div>
-            </div>
+            
                                 <div class="alert alert-primary" role="alert">
                                     Get a 30% Discount on group <a href="#" class="alert-link"> accomodations</a> 
                                 </div>
