--- a/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/main.css" />
 </head>
+<img src="https://img.freepik.com/free-vector/organic-flat-feedback-concept_52683-62653.jpg?w=996&t=st=1669410830~exp=1669411430~hmac=f546b93be7367f3438821069ee3a241a84a3eaa6d18d5018ab3c33ed4948a699" />
 <h1>Rate the accomodation</h1>
 
 <div class="row">
