--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,7 +18,7 @@
 
                             <div class="mb-md-5 mt-md-4 pb-5">
 
-                            <h2 class="fw-bold mb-2 text-uppercase text-white">Create a new account.</>
+                            <h2 class="fw-bold mb-2 text-uppercase text-white">Create a new account.</h2>
                             <hr />
                             <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                                
