--- a/MVCTravelBookingISE/Views/Home/Index.cshtml
+++ b/MVCTravelBookingISE/Views/Home/Index.cshtml
@@ -14,13 +14,82 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-    <link rel="stylesheet" href="~/css/Design.css" />
+    <script src="~/js/" type="text/javascript"></script>
+    <link rel="stylesheet" href="~/css/Home.css" />
 
     
 </head>
 <body>
-    
+    <!--Text Logo and Toggle for JS nav bar -->
+    <section class="showcase">
+      
+
+        <!--Landing Page Text and link that'll be styled into a button -->
+        <div class="text text-white">
+            <h3  class="text-white">South Africa's Best</h3>
+            <h3 class="text-white"> Travelling Experience</h3>
+            <p>Welcome to the home of easy booking for hotels, transport and flights and more</p>
+            <a href="#">Book Now</a>
+        </div>
+
+        <!--Landing Page Portfolio - Travel Destinations -->
+
+        <div class="travel-portfolio">
+         
+                <img style="margin-left:50px;" src="https://cdn.pixabay.com/photo/2013/07/12/13/53/aeroplane-147495_1280.png" />
+           
+         
+        </div>
+
+
+        <!-- Unordered List for Social Icons -->
+       
+    </section>
+
+    <!-- Nav Bar Menu -->
+   
+
+
+    @*<div class="container">
+
+        <header>
+            <h2><a href="#"><i class="ion-plane"></i> Katotravel</a></h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#" title="Hotels">Hotels</a>
+                    </li>
+                    <li>
+                        <a href="#" title="Flights">Flights</a>
+                    </li>
+                    <li>
+                        <a href="#" title="Tours">Tours</a>
+                    </li>
+                    <li>
+                        <a class="btn" href="#" title="Register / Log In">Register/Log In</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="cover">
+            <h1>Discover what's out there.</h1>
+            <form class="flex-form">
+                <label for="from">
+                    <i class="ion-location"></i>
+                </label>
+                <input type="search" placeholder="Where do you want to go?">
+                <input type="submit" value="Search">
+            </form>
+            <div id="madeby">
+                <span>
+                    Photo by <a href="" target="_blank">Ben Blennerhassett</a>
+                </span>
+            </div>
+        </div>
+
+    </div>
+*@
    
 @*
     <header class="">
