--- a/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
+++ b/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
@@ -9,20 +9,24 @@
     <link rel="stylesheet" href="~/MVCTravelBookingISE.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/flatly/bootstrap.min.css" integrity="sha384-zEpdAL7W11eTKeoBJK1g79kgl9qjP7g84KfK3AZsuonx38n8ad+f5ZgXtoSDxPOh" crossorigin="anonymous">
 
+<a href="~/lib/jquery/dist/jquery.min.map"></a>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
 
-    <style>
-        body {
-            margin: 0px;
-        }
-    </style>
 </head>
+<style>
+    body {
+        margin: 0px;
+    }
+</style>
 <body>
   
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark " >
             <div class="container-fluid">
                 <a class="navbar-brand" href="">
-                  <img src="~/img/A letter Logo design(4).png"  style=" width:60px;"/> Unlimited Travels
+                  <img src="~/img/A letter Logo design(4).png"  style=" width:70
+px;"/> Unlimited Travels
                 </a>
                 <button class="navbar-toggler"
                         type="button"
@@ -38,15 +42,7 @@
 
                     <ul class="navbar-nav me-auto">
 
-                        <li class="nav-item ">
-                        <a class="nav-link" href="">
-                               
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
-                                    <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z" />
-                                </svg> Home
-                                <span class="visually-hidden">(current)</span>
-                            </a>
-                        </li>
+                       
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="TransportModels" asp-action="Index">
 
@@ -81,7 +77,7 @@
                             <a class="dropdown-item" asp-controller="AccomodationModels" asp-action="Index">Accomodation</a>
                            
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Dashboard</a>
+                            <a class="dropdown-item" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
                         </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -93,13 +89,12 @@
 
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropDown">
-                                <a class="dropdown-item" asp-controller="FlightModels" asp-action="Index">Flights</a>
+                                <a class="dropdown-item" asp-controller="Flights" asp-action="Index">Flights</a>
                                 <a class="dropdown-item" asp-controller="AccomodationModels" asp-action="Index">Accomodation</a>
                                 <a class="dropdown-item" asp-controller="BookingAccoItem" asp-action="Index">Booking</a>
-                                <a class="dropdown-item" asp-controller="TransportModels" asp-action="Index">Transportation</a>
+                                <a class="dropdown-item" asp-controller="Transport" asp-action="Index">Transportation</a>
 
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Dashboard</a>
+                                
                             </div>
                         </li>
                       
