--- a/MVCTravelBookingISE/Views/Transport/Details.cshtml
+++ b/MVCTravelBookingISE/Views/Transport/Details.cshtml
@@ -1,5 +1,73 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model MVCTravelBookingISE.Models.TransportModel
+
+
 @{
 }
+<head>
+
+    <title>Home Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/main.css" />
+</head>
+
+
+<h1 class="font-weight-bold text-center dark-grey-text pb-2">Confirm your chosen reserved transport!</h1>
+
+<div class="card text-white bg-dark border-darky" style="width:700px; margin-top:50px;">
+    
+    <div class="card-body text-white">
+        
+        <h5 class="card-title text-white">From: @Html.DisplayFor(model => model.Pick_Up_Point) </h5>
+        <h5 class="card-title text-white"> To:  @Html.DisplayFor(model => model.Destination_point)</h5>
+        <p class="card-text"> The transport is 
+            @Html.DisplayFor(model => model.Transport_Status) </p >
+       
+        <!-- ID Example -->
+        <p class="text-warning fs-6">   What are fuel card?</p>
+        <p class="text-warning fs-6">
+            Fuel cards allow the purchase of petrol/diesel from a filling station belonging to the network at a lower price, offering significant savings in fuel costs for fleets. They are automatically added with car rentals!
+        </p>
+         
+        <!-- Central Modal Medium Success -->
+       
+        <!-- Central Modal Medium Success-->
+        <div class="col-sm">
+
+
+
+            <div class="mb-2">
+                <div class="input-group">
+                    <label for="adults-input" class="input-group-text">Date Reserved</label>
+                    <input type="date"
+                           min="0"
+                           class="form-control"
+                           id="adult-input"
+                           aria-describedby="adults-label" />
+                </div>
+
+            </div>
+        </div>
+ 
+
+</div>
+   
+<div>
+        <a class="btn btn-success" data-toggle="popover"
+           asp-controller="BookingModels"
+           asp-action="AddTransportItemToBookingCart"
+           asp-route-id="@Model?.Transport_Id">
+            <!-- Full screen modal -->
+            Reserve  @Html.DisplayFor(model => model.Transport_Type)
+
+        </a>
+
+    <a class="btn btn-primary" asp-action="Index">Back to List</a>
+   
+</div>
+<!-- Checked switch -->
+<script src="~/js/main.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
