--- a/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
+++ b/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@ px;"/> Unlimited Travels
                             <div class="dropdown-menu" aria-labelledby="navbarDropDown">
                                 <a class="dropdown-item" asp-controller="Flights" asp-action="Index">Flights</a>
                                 <a class="dropdown-item" asp-controller="AccomodationModels" asp-action="Index">Accomodation</a>
-                                <a class="dropdown-item" asp-controller="BookingAccoItem" asp-action="Index">Booking</a>
+                                <a class="dropdown-item" asp-controller="BookingCart" asp-action="Index">Booking</a>
                                 <a class="dropdown-item" asp-controller="Transport" asp-action="Index">Transportation</a>
 
                                 
