--- a/MVCTravelBookingISE/Views/Transport/Details.cshtml
+++ b/MVCTravelBookingISE/Views/Transport/Details.cshtml
@@ -15,15 +15,19 @@
 </head>
 
 
-<h1 class="font-weight-bold text-center dark-grey-text pb-2">Confirm your chosen reserved transport!</h1>
+<h1 class="font-weight-bold text-center dark-grey-text pb-2" style=" margin-top:50px;">Confirm your chosen reserved transport!</h1>
+<div class="text-center">
 
+        
+    <img class=" text-center" style="height:300px; width:400px;" src="https://img.freepik.com/free-vector/front-car-concept-illustration_114360-7978.jpg?w=1380&t=st=1669576935~exp=1669577535~hmac=e1ec12d4dad09da30a738d6398dfc3968407e97a9543936b619fd790be93e09d" />
+    </div>
 <div class="card text-white bg-dark border-darky" style="width:700px; margin-top:50px;">
     
     <div class="card-body text-white">
         
         <h5 class="card-title text-white">From: @Html.DisplayFor(model => model.Pick_Up_Point) </h5>
         <h5 class="card-title text-white"> To:  @Html.DisplayFor(model => model.Destination_point)</h5>
-        <p class="card-text"> The transport is 
+        <p class="card-text text-success"> The transport is 
             @Html.DisplayFor(model => model.Transport_Status) </p >
        
         <!-- ID Example -->
@@ -61,7 +65,7 @@
            asp-action="AddTransportItemToBookingCart"
            asp-route-id="@Model?.Transport_Id">
             <!-- Full screen modal -->
-            Reserve  @Html.DisplayFor(model => model.Transport_Type)
+            Reserve Transport! @Html.DisplayFor(model => model.Transport_Type)
 
         </a>
 
