--- a/MVCTravelBookingISE/Views/Transport/Index.cshtml
+++ b/MVCTravelBookingISE/Views/Transport/Index.cshtml
@@ -33,7 +33,7 @@
 
                 <div class="col">
                     <div class="mb-2 align-content-center">
-                        <a class="btn btn-primary text-white " asp-controller="TransportModels" asp-action="Filter">
+                        <a class="btn btn-primary text-white "asp-controller="Transport" asp-action="Filter">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                             </svg> Search
@@ -50,10 +50,15 @@
     </div>
 </form>
 
+<div class="text-center">
+
+         <h1 style="margin-top:50px;" class="text-center">Book your Transport easy!</h1>
+        <img class=" text-center" style="height:300px; width:400px;"  src="https://img.freepik.com/free-vector/car-driving-concept-illustration_114360-8001.jpg?w=1380&t=st=1669576050~exp=1669576650~hmac=ec5ed3eacacc533547e21d6adce754724b32f60bfafffecb280b191841d4032b" />
+    </div>
 <!-- Section -->
 
 <div class="alert alert-warning" role="alert">
-    A simple warning alert—check it out!
+
 </div>
 
 <div class="container">
@@ -253,27 +258,27 @@
 <div class="container">
     <div class="card-group">
         <div class="card">
-            <img src="https://images.unsplash.com/photo-1615929361868-2e41ea1befaf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8VWJlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
+            <a href="https://www.uber.com/za/en/"><img src="https://images.unsplash.com/photo-1615929361868-2e41ea1befaf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8VWJlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="..."></a>
             <div class="card-body">
                 <h5 class="card-title">Uber</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text">Automatically syncs to your booking</p>
+           
             </div>
         </div>
         <div class="card">
-            <img src="https://th.bing.com/th/id/R.7d16f7986605c62618365e02ebffdb53?rik=1hbPxfELH1FxDw&pid=ImgRaw&r=0" class="card-img-top" alt="...">
+            <a href="https://bolt.eu"><img src="https://th.bing.com/th/id/R.7d16f7986605c62618365e02ebffdb53?rik=1hbPxfELH1FxDw&pid=ImgRaw&r=0" class="card-img-top" alt="..."></a>
             <div class="card-body">
                 <h5 class="card-title">Bolt</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text">Automatically syncs to your booking</p>
+               
             </div>
         </div>
         <div class="card">
-            <img src="https://yt3.ggpht.com/a/AGF-l7-T-7ipjq8Dry1u_OLOryKsCWC9K6Y8tas5Jg=s900-mo-c-c0xffffffff-rj-k-no" class="card-img-top" alt="...">
+            <a href="https://web.didiglobal.com/"><img src="https://yt3.ggpht.com/a/AGF-l7-T-7ipjq8Dry1u_OLOryKsCWC9K6Y8tas5Jg=s900-mo-c-c0xffffffff-rj-k-no" class="card-img-top" alt="..."></a>
             <div class="card-body">
                 <h5 class="card-title">DiDi</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text">Automatically syncs to your booking</p>
+             
             </div>
         </div>
     </div>
