--- a/MVCTravelBookingISE/Views/Flights/Index.cshtml
+++ b/MVCTravelBookingISE/Views/Flights/Index.cshtml
@@ -19,11 +19,180 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@500&display=swap" rel="stylesheet">
     </head>
-    <section>
-   @* <img style="height:300px;  width:500px;" src="https://img.freepik.com/free-psd/plane-mockup_1310-1054.jpg?w=996&t=st=1669411583~exp=1669412183~hmac=361dadd9885554b7f6110ff3ecd41a8d49455926aa61222ccfcebaba5edb9cf4" />
-    *@
-</section>
-    <table class="table table-hover table-striped text-white table-dark">
+
+    <div>
+    <div class="alert alert-dismissible alert-primary">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <strong>Cheap and affordable Flights</strong> and check out the Flight Rules<a href="FlightRulesModels/Index" class="alert-link"> Check Now!</a>.
+    </div>
+    <div class="text-center">
+
+         <h1 style="margin-top:50px;" class="text-center">Book your Flight easy!</h1>
+        <img class=" text-center" style="height:300px; width:400px;"  src="https://img.freepik.com/free-vector/study-abroad-concept-illustration_114360-7493.jpg?w=740&t=st=1669572258~exp=1669572858~hmac=eea5533516ef63a030db94b915fb898644bea0b8f8656e597b939bcdfe136bc7" />
+    </div>
+       
+</div>
+
+
+<div class="container-sm bg-dark text-white">
+    <div class="my-2 card bg-dark">
+        <div class="card-body">
+            <h5 class="card-title">Locations</h5>
+            <div class="row">
+                
+             <div class="col-sm">
+               <div class="mb-2">
+                   <label id="origin-label" for="origin-input" class="form-label">Origin</label>
+                   <div class="input-group">
+                         <span class="input-group-text"><i class="bi-pin-map"></i> </span>
+                            <input
+                              type="text"
+                              class="form-control"
+                              list="origin-options"
+                              id="origin-input"
+                              placeholder="Location"
+                              aria-describedby="origin-label"/>
+                  <datalist id="origin-options"></datalist>
+             </div>
+                 <div class="input-group"></div>
+                 </div>
+  </div>
+  <div class="col-sm">
+    <div class="mb-2">
+      <label id="destination-label" for="destination-input" class="form-label"
+        >Destination</label>
+        <div class="input-group">
+    <span class="input-group-text"><i class="bi-pin-map-fill"></i> </span>
+    <input
+      type="text"
+      class="form-control"
+      list="destination-options"
+      id="destination-input"
+      placeholder="Location"
+      aria-describedby="destination-label"
+    />
+    <datalist id="destination-options"></datalist>
+  </div>
+      <div class="input-group"></div>
+    </div>
+  </div>
+        </div>
+
+
+        </div>
+    </div>
+    <!-- ... -->
+    <div class="row">
+        <div class="mb-2 col">
+            <div class="h-100 card bg-dark ">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Dates</h5>
+                    <div class="mb-2">
+                        <label id="flight-type-label" for="flight-type-select" class="form-label">Flight</label>
+                        <select id="flight-type-select"
+                                class="form-select"
+                                aria-describedby="flight-type-label">
+                            <option value="one-way">One-way</option>
+                            <option value="round-trip">Round-trip</option>
+                        </select>
+                    </div>
+                    <div id="departure-date" class="mb-2">
+                         <label id="departure-date-label" for="departure-date-input" class="form-label">Departure date</label>
+                          <div class="input-group">
+                            <span class="input-group-text"><i class="bi-calendar"></i></span>
+                            <input
+                              type="date"
+                              class="form-control"
+                              id="departure-date-input"
+                              aria-describedby="departure-date-label"
+                            />
+                          </div>
+
+                    </div>
+                    <div id="return-date" class="mb-2">
+
+                        <label id="return-date-label" for="return-date-input" class="form-label">Return date</label>
+                        <div class="input-group">
+                            <span class="input-group-text"><i class="bi-calendar-fill"></i> </span>
+                            <input type="date"
+                                   class="form-control"
+                                   id="return-date-input"
+                                   aria-describedby="return-date-label" />
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mb-2 col">
+            <div class="h-100 card bg-dark">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Details</h5>
+                    <div class="mb-2">
+                        <label id="travel-class-label" for="travel-class-select" class="form-label">Travel class</label>
+                        <select class="form-select"
+                                id="travel-class-select"
+                                aria-describedby="travel-class-label">
+                            <option value="ECONOMY">Economy</option>
+                            <option value="PREMIUM_ECONOMY">Premium Economy</option>
+                            <option value="BUSINESS">Business</option>
+                            <option value="FIRST">First</option>
+                        </select>
+                    </div>
+                    <label class="form-label">Passengers</label>
+                    <div class="mb-2">
+
+                        <div class="input-group">
+                            <label for="adults-input" class="input-group-text">Adults</label>
+                            <input type="number"
+                                   min="0"
+                                   class="form-control"
+                                   id="adults-input"
+                                   aria-describedby="adults-label" />
+                        </div>
+                        <span id="adults-label" class="form-text">12 years old and older</span>
+
+
+
+                    </div>
+                    <div class="mb-2">
+                        <div class="input-group">
+                            <label for="children-input" class="input-group-text">Children</label>
+                            <input type="number"
+                                   min="0"
+                                   class="form-control"
+                                   id="children-input"
+                                   aria-describedby="children-label" />
+                        </div>
+                        <span id="children-label" class="form-text">2 to 12 years old</span>
+                    </div>
+                    <div class="mb-2">
+
+                        <div class="input-group">
+                            <label for="infants-input" class="input-group-text">Infants</label>
+                            <input type="number"
+                                   min="0"
+                                   class="form-control"
+                                   id="infants-input"
+                                   aria-describedby="infants-label" />
+                        </div>
+                        <span id="infants-label" class="form-text">Up to 2 years old</span>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+        
+    </div>
+    <button id="search-button" class="w-100 btn btn-primary" disabled>Search</button>
+    <!-- ... -->
+</div>
+
+
+<table class="table table-hover text-black " style="margin-top:50px;">
     <thead>
         <tr>
             <th>
@@ -111,7 +280,7 @@
                     }
                 </td>
                 <td>
-                   @Html.DisplayFor(modelItem => item.Flight_Price)
+                  R  @Html.DisplayFor(modelItem => item.Flight_Price)
 </td>
                
                 <td>
